<resources>
    <string name="app_name">Keepr</string>


    <!--    Input Labels    -->

    <string name="username_label">username</string>
    <string name="email_label">email</string>
    <string name="password_label">password</string>
    <string name="reset_code_label">reset code</string>
    <string name="new_password_label">new password</string>
    <string name="new_password_confirm_label">confirm password</string>
    <string name="title_label">title</string>
    <string name="account_label">account name</string>
    <string name="website_label">website</string>
    <string name="notes_label">notes</string>


    <!--    Button Text    -->
    <string name="submit_button">submit</string>
    <string name="use_password_button">Use password instead</string>
    <string name="forgot_password_button">Forgot your password?</string>
    <string name="send_reset_code_button">Send code</string>
    <string name="reset_password_button">Reset Password</string>


    <!--    Account creation    -->

    <string name="create_account">Create your local account</string>
    <string name="use_biometrics">Use fingerprint to unlock?</string>

    <!--    Login   -->

    <string name="input_password">Input your password</string>

    <!--    Forgot Password     -->
    <string name="forgot_password">Reset your password</string>
    <string name="forgot_password_body">Clicking this button will send a message to the account\n%1$s\nwith a code to
        reset your password
    </string>


</resources>
