<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.resetPassword.ResetPasswordFragment"
                                                   tools:background="@color/background">

    <Button
            android:text="@string/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout"
            android:background="@color/colorPrimaryLight" android:textColor="@android:color/white"
            android:layout_marginTop="50dp"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/ic_keepr_logo"
            android:id="@+id/logo3" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="50dp" app:layout_constraintEnd_toStartOf="@+id/title4"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/title4" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title4" android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="@+id/logo3" app:layout_constraintBottom_toBottomOf="@+id/logo3"
            android:textSize="45sp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content" android:id="@+id/new_password_layout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:textColorHint="@android:color/white"
            android:hint="@string/new_password_label" android:layout_marginTop="35dp" app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_password_input" android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white" android:inputType="text" android:singleLine="true"
                android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textColorHint="@android:color/white"
            android:hint="@string/new_password_confirm_label" android:id="@+id/confirm_password_layout"
            android:backgroundTint="@android:color/white" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/new_password_layout" app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password_input"
                android:inputType="textWebEmailAddress" android:textColor="@android:color/white"
                android:singleLine="true" android:selectAllOnFocus="true"
                android:backgroundTint="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>