<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addNewPassword.AddNewPasswordFragment" android:background="@color/background">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout2" android:textColorHint="@android:color/white"
            android:hint="@string/title_label">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:background="android:backgroundTintnd" android:backgroundTint="@android:color/white"
                android:inputType="text" android:singleLine="true" android:id="@+id/title_input"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout3"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:hint="@string/account_label">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white" android:selectAllOnFocus="true"
                android:id="@+id/account_input"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            android:id="@+id/textInputLayout4" android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white" android:hint="@string/username_label">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white" android:textColor="@android:color/white"
                android:selectAllOnFocus="true" android:singleLine="true" android:id="@+id/username_input"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="217dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            android:id="@+id/textInputLayout5" android:textColorHint="@android:color/white"
            android:hint="@string/password_label" app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white" android:textColor="@android:color/white"
                android:selectAllOnFocus="true" android:singleLine="true" android:id="@+id/password_input"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/generate_random_password_button" app:layout_constraintStart_toEndOf="@+id/textInputLayout5"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout5"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout5" android:background="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4" app:layout_constraintHorizontal_bias="1.0"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" android:id="@+id/textInputLayout7"
            android:textColorHint="@android:color/white" android:hint="@string/website_label">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white" android:textColor="@android:color/white"
                android:selectAllOnFocus="true" android:singleLine="true" android:id="@+id/website_input"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ScrollView
            android:layout_width="280dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout7" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/notes_input"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>