<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/login"
                                                   tools:context=".ui.login.LoginFragment"
                                                   android:background="@color/background">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="@android:color/white" android:hint="@string/password_label"
            android:id="@+id/password_layout" app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="30dp"
            android:visibility="invisible" tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label" android:inputType="textPassword"
                android:textColor="@android:color/white" android:singleLine="true" android:selectAllOnFocus="true"
                android:id="@+id/password_input" android:backgroundTint="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title2" android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" android:textColor="@android:color/white"
            android:textSize="45sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/keepr_logo" app:layout_constraintBottom_toBottomOf="@+id/keepr_logo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/ic_keepr_logo"
            android:id="@+id/keepr_logo" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toStartOf="@+id/title2"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/fingerprint_dialog_touch_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/title2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/white"/>
    <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp" app:srcCompat="@drawable/fingerprint_dialog_fp_to_error"
            android:id="@+id/fingerprint_image"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"/>
    <Button
            android:text="@string/use_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/use_password" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
            android:background="@color/colorPrimaryLight" android:textColor="@android:color/white"
            style="@style/Widget.AppCompat.Button" android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintTop_toBottomOf="@+id/fingerprint_image"/>
    <Button
            android:text="@string/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password_button" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@android:color/white"
            android:textSize="16sp" android:textAllCaps="false" tools:visibility="visible"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>